--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/APIDevelopSpringBoot
 spring.datasource.username =root
-spring.datasource.password = 83Group83!
-spring.datasource.driver-class-name=com.msql.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl.auto = update
-spring.test.database.replace=none
+spring.datasource.password = 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.test.database.replace= none
